--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node app",
+    "lint": "eslint --color '**/*.js'",
+    "lint:watch": "esw --color '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
     "jest": "^19.0.2",
-    "lighthouse": "^1.6.5",
     "node-fetch": "^1.6.3",
+    "node-localstorage": "^1.3.0",
     "pwmetrics": "^2.0.1"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "node-localstorage": "^1.3.0"
+    "eslint-watch": "^3.1.0"
   }
 }
